[package]
name = "driver-rust"
version = "0.1.0"
authors = ["Anders Petersen <klasbo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"

[lib]
name = "driver_rust"
path = "src/lib.rs"

[[bin]]
name = "driver-rust"
path = "src/main.rs"
